--- a/gateway-app/src/main/resources/web/index.html
+++ b/gateway-app/src/main/resources/web/index.html
@@ -2,30 +2,38 @@
 <head>
   <link rel="stylesheet" href="web/css/test-bench.css"/>
   <script type="text/javascript">
-      (function () {
-          if (!window.console) {
-              var console = window.console = {};
-              console.log = console.debug = console.trace = console.error = console.warn = function () {
-              };
-          }
-      })();
+    var require = {
+      paths: {
+        'domReady': 'bower/requirejs-domready/domReady',
+        'angular': 'bower/angular/angular',
+        'angular-route': 'bower/angular-route/angular-route',
+        'angular-ui-date': 'bower/angular-ui-date/src/date',
+        'jquery': 'bower/jquery/dist/jquery',
+        'lodash': 'bower/lodash/dist/lodash'
+      },
+
+      shim: {
+        'angular': {
+          exports: 'angular',
+          deps: ['jquery']
+        },
+        'angular-route': {
+          deps: ['angular']
+        },
+        'angular-ui-date': {
+          deps: ['angular']
+        },
+        'jquery': {
+        }
+      }
+    };
   </script>
-  <script src="web/bower/requirejs/require.js" data-main="web/test-bench/main.js"></script>
-  <!--
+  <script src="web/bower/requirejs/require.js" data-main="web/gateway-main.js"></script>
   <link rel="stylesheet" href="web/bower/bootstrap/dist/css/bootstrap.css"/>
-  <link rel="stylesheet" href="web/test-bench/test-bench.css"/>
-  -->
 </head>
 <body>
-<div id="wrap">
-    <div class="grid_12">
-        <div class="error" id="errorHolder">
-        </div>
-        <h1>Test Bench <span class="helpToggle" title="test bench help">Test Bench Help</span></h1>
-        <div ng-view>
-
-        </div>
-    </div>
+<div id="container">
+  <div ng-view></div>
 </div>
 </body>
 </html>
