--- a/gateway-app/src/main/resources/web/index.html
+++ b/gateway-app/src/main/resources/web/index.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="web/bower/bootstrap/dist/css/bootstrap.css"/>
 </head>
 <body>
-<div id="container">
+<div class="container">
   <div ng-view></div>
 </div>
 </body>
