--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -4,8 +4,29 @@
     <h1>Gateway</h1>
   </div>
 
-  <div class="col-lg-12">
-      trygve
-  </div>
+
+    <div class="row">
+        <div class="col-md-6"> <h3>New person</h3>
+            <form role="form" ng-submit="savePerson()">
+                <div class="form-group">
+                    <label for="n">Name</label>
+                    <input type="text" ng-model="person.name" class="form-control" id="n" placeholder="Enter name">
+                </div>
+
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form></div>
+        <div class="col-md-6">
+            <ul>
+                <li ng-repeat="p in persons">
+                    {{p.id}} {{p.name}}
+                </li>
+            </ul>
+
+            <h3>All persons</h3>
+            <pre>{{persons|json}}</pre>
+        </div>
+    </div>
+
+
 
 </div>
