Added detail view for person (Demo)

--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -8,7 +8,7 @@
 
 
     <div class="row">
-        <div class="col-sm-6"><h3>New Application Instance</h3>
+        <div class="col-sm-6"><h3>New Application Instance (Not working)</h3>
 
             <form role="form" ng-submit="saveAppInst()">
 
