--- a/gateway-app/src/main/resources/web/index.html
+++ b/gateway-app/src/main/resources/web/index.html
@@ -29,6 +29,7 @@
   </script>
   <script src="web/bower/requirejs/require.js" data-main="web/gateway-main.js"></script>
   <link rel="stylesheet" href="web/bower/bootstrap/dist/css/bootstrap.css"/>
+   <title>Gateway</title>
 </head>
 <body>
 <nav class="navbar navbar-default" role="navigation">
