--- a/gateway-app/src/main/resources/web/index.html
+++ b/gateway-app/src/main/resources/web/index.html
@@ -47,17 +47,18 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link</a></li>
-        <li><a href="#">Link </a></li>
+        <!-- <ul class="nav navbar-nav">
+           <li class="active"><a href="#">Link</a></li>
+           <li><a href="#">Link </a></li>
 
-      </ul>
+         </ul>
 
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+         <ul class="nav navbar-nav navbar-right">
+           <li><a href="#">Link</a></li>
 
-      </ul>
-    </div><!-- /.navbar-collapse -->
+         </ul>
+         -->
+       </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
