App detail page  are connected to backend!

--- a/gateway-app/src/main/resources/web/gateway/appInst.html
+++ b/gateway-app/src/main/resources/web/gateway/appInst.html
@@ -1,5 +1,10 @@
 <div>
     <h1>Application Instance Details</h1>
 
-    <p><b>ID:</b> {{appId}}</p>
+    <p><b>ID:</b> {{app.id}}</p>
+    <p><b>Name:</b> {{app.name}}</p>
+    <p><b>Host:</b> {{app.host}}</p>
+    <p><b>Port:</b> {{app.port}}</p>
+    <p><b>Path:</b> {{app.path}}</p>
+
 </div>
