Started validating frontend with js. Change path names in ApplicationInstancesController.

--- a/gateway-app/src/main/resources/web/gateway/appInst.html
+++ b/gateway-app/src/main/resources/web/gateway/appInst.html
@@ -8,4 +8,5 @@
     <p><b>Path:</b> {{app.path}}</p>
 
 
+    <button type="button" class="btn btn-danger"  ng-click="deleteAppInst()">Delete</button>
 </div>
