--- a/gateway-app/src/main/resources/web/index.html
+++ b/gateway-app/src/main/resources/web/index.html
@@ -52,12 +52,12 @@
            <li><a href="#">Link </a></li>
 
          </ul>
-
+ -->
          <ul class="nav navbar-nav navbar-right">
-           <li><a href="#">Link</a></li>
+           <li><a href="#"> v1.1.2 ALPHA</a></li>
 
          </ul>
-         -->
+
        </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
