--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -45,6 +45,64 @@
 <hr>
 
 
+<div class="row">
+    <div class="col-sm-6">
+        <h3>New Load Balancer </h3>
+
+        <form role="form" ng-submit="createLoadBalancer()">
+
+            <div class="form-group">
+                <label for="inLbName">Name</label>
+                <input type="text" ng-model="lb.name" class="form-control" id="inLBName"
+                       required
+                       placeholder="Enter load balancer name">
+            </div>
+            <div class="form-group">
+                <label for="inLbHost">Host</label>
+                <input type="text" ng-model="lb.host" class="form-control " id="inLbHost"
+                       required
+                       placeholder="Enter host">
+            </div>
+            <div class="form-group">
+                <label for="inLbHost">Installation Path</label>
+                <input type="text" ng-model="lb.installationPath" class="form-control " id="inLbPath"
+                       required
+                       placeholder="Enter path">
+            </div>
+            <div class="form-group">
+                <label for="inLbHost">SSH Key</label>
+                <input type="text" ng-model="lb.sshKey" class="form-control " id="inLbSshKey"
+                       required
+                       placeholder="Enter SSH key">
+            </div>
+
+
+            <button type="submit" class="btn btn-primary">Create</button>
+        </form>
+    </div>
+
+
+    <div class="col-sm-6">
+
+        <h3>All Load Balancers</h3>
+
+
+        <div class="list-group">
+            <a href="#/lb/{{lb.id}}" class="list-group-item" ng-repeat="lb in allLBs">
+                <b> {{lb.name}}</b> {{lb.installationPath}} {{lb.sshKey}} ({{lb.id}})
+            </a>
+
+
+        </div>
+        <h4>Raw</h4>
+        <pre>{{allLBs|json}}</pre>
+    </div>
+
+</div>
+
+<hr>
+
+
 <h1>Person (demo) </h1>
 
 <div class="row">
