--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -14,7 +14,7 @@
             </div>
             <div class="form-group">
                 <label for="inAppPublicUrl">Public URL</label>
-                <input type="text" ng-model="app.publicUrl" class="form-control " id="inAppPublicUrl"
+                <input type="text" ng-model="app.publicURL" class="form-control " id="inAppPublicUrl"
                        required
                        placeholder="Enter public url">
             </div>
