Updated application page to match the backend controller. Started working on some directives.

--- a/gateway-app/src/main/resources/web/gateway/app.html
+++ b/gateway-app/src/main/resources/web/gateway/app.html
@@ -56,10 +56,10 @@
 
     <div class="col-sm-6">
 
-        <h3>All Application Instances</h3>
+        <h3>All Application Instances of '{{app.name}}'  </h3>
 
         <div class="list-group">
-            <a href="#/appInst/{{a.id}}" class="list-group-item" ng-repeat="a in allInstApps">
+            <a href="#/appInst/{{a.id}}" class="list-group-item" ng-repeat="a in app.applications">
                 <b> {{a.name}}</b> ({{a.id}}) {{a.host}}/{{a.path}}:{{a.port}}
             </a>
 
