--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -154,8 +154,14 @@
 
 
         </div>
-        <h4>Raw</h4>
-        <pre>{{allLBs|json}}</pre>
+
+        <a href="" ng-model="collapsedLB" ng-click="collapsedLB=!collapsedLB"><strong>Toggle (show/hide)</strong> json data</a>
+
+        <div ng-show="collapsedLB">
+            <pre>{{allLBs|json}}</pre>
+        </div>
+
+
     </div>
 
 </div>
