AppInst controller can now save. And return more info

--- a/gateway-app/src/main/resources/web/gateway/loadBalancer.html
+++ b/gateway-app/src/main/resources/web/gateway/loadBalancer.html
@@ -2,4 +2,9 @@
 
 <pre>{{lb|json}}</pre>
 
+<h3>Application in this Load Balancer</h3>
+<pre>{{lbApps|json}}</pre>
+<h3>Add new application </h3>
+        ?
+
 <!--<lb-form></lb-form>-->
