--- a/gateway-app/src/main/resources/web/gateway/app.html
+++ b/gateway-app/src/main/resources/web/gateway/app.html
@@ -1,11 +1,19 @@
 <h1>Application  : {{app.name}} {{app.publicURL}} </h1>
 
+
+<ul class="list-unstyled">
+    <li>ID : {{app.id}}</li>
+    <li>Number of instances : {{app.applications.length}}</li>
+
+</ul>
+   <!--
+
 <div class="progress progress-striped active">
     <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
         <span class="sr-only">100% Complete (success)</span>
     </div>
 </div>
-
+-->
 
 <div class="row">
     <div class="col-sm-6">
